; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/executor/extr_distributed_execution_locks.c_AcquireExecutorShardLocks.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/executor/extr_distributed_execution_locks.c_AcquireExecutorShardLocks.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32 }

@ExclusiveLock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @AcquireExecutorShardLocks(%struct.TYPE_5__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %6 = load i32, i32* %4, align 4
  %7 = call i32 @AcquireExecutorShardLockForRowModify(%struct.TYPE_5__* %5, i32 %6)
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @AcquireExecutorShardLocksForRelationRowLockList(i32 %10)
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %13 = call i64 @RequiresConsistentSnapshot(%struct.TYPE_5__* %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %21

15:                                               ; preds = %2
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %17 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* @ExclusiveLock, align 4
  %20 = call i32 @LockRelationShardResources(i32 %18, i32 %19)
  br label %21

21:                                               ; preds = %15, %2
  ret void
}

declare dso_local i32 @AcquireExecutorShardLockForRowModify(%struct.TYPE_5__*, i32) #1

declare dso_local i32 @AcquireExecutorShardLocksForRelationRowLockList(i32) #1

declare dso_local i64 @RequiresConsistentSnapshot(%struct.TYPE_5__*) #1

declare dso_local i32 @LockRelationShardResources(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
